tools/echoserver/local/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: echoserver
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
              ephemeral-storage: 5Mi
            limits:
              cpu: 50m
              memory: 50Mi
              ephemeral-storage: 10Mi
      tolerations:
        - effect: PreferNoSchedule
          #key: node.local.io
          operator: Exists
        - effect: NoSchedule
          #key: node.local.io
          operator: Exists
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app: echoserver
